--- a/BanVeDiTourDuLich/Views/User/InforUser.cshtml
+++ b/BanVeDiTourDuLich/Views/User/InforUser.cshtml
@@ -315,6 +315,16 @@
                                         <div style="margin-top: 5px" class="field-validation-valid text-danger" data-valmsg-for="Email" data-valmsg-replace="true"></div>
                                     </div>
                                 </div>
+
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 col-xs-4">
+                                        <label>Số điện thoại <span style="color: red">(*)</span>:</label>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-8">
+                                        <input type="text" name="SoDienThoai" id="SoDienThoai" class="form-control" data-val="true" data-val-required="Vui lòng nhập" value="@Model.SoDienThoai">
+                                    </div>
+                                </div>
+
                                 <div class="row mg-bot30 ">
                                     <div class="col-md-2 col-sm-2 col-xs-4">
                                         <label>Địa chỉ <span style="color: red">(*)</span>:</label>
