--- a/BanVeDiTourDuLich/Views/User/Register.cshtml
+++ b/BanVeDiTourDuLich/Views/User/Register.cshtml
@@ -90,6 +90,15 @@
                     </div>
                 </div>
 
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Số điện thoại" name="SoDienThoai" />
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-user"></span>
+                        </div>
+                    </div>
+                </div>
+
                 <div>
                     <label>Giới tính <span style="color: red">(*)</span>:</label>
                 </div>
