--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -205,7 +205,8 @@
     var chat = $.connection.chat;
     $.connection.hub.start().done(function () {
         var managerId = $('.MaTaiKhoan')[0].value;
-        chat.server.addConnectionId(managerId, chat.connection.id);
+        chat.server.initManagerRun(managerId, chat.connection.id);
+        //chat.server.getChartData();
     });
 
     chat.client.addNewMessageCurrentManagerBrower = function (clientId,msg, timeSent , managerName , imagePath) {
@@ -367,6 +368,13 @@
     chat.client.removeMessageInformationInNotification = function () {
 
     };
+
+
+    chat.client.updateChart = function (labels, data) {
+        console.log(123);
+        UpdateChart(labels, data);
+    };
+
 
     //$('#btn-message').click(function() {
     //    var check = $("#chatIsShown")[0];
