--- a/BanVeDiTourDuLich/Views/Admin/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/Index.cshtml
@@ -4,8 +4,6 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     int count = HomeController.Count;
     DataContext context = new DataContext();
-    int user = context.KhachHangs.Count();
-    int ve = context.Ves.Count();
 }
 
 <div class="content-wrapper">
@@ -39,9 +37,9 @@
                     <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
-                            <h3>@ve</h3>
+                            <h3 id="sovedatmoi">0</h3>
 
-                            <p>Số vé đặt mới</p>
+                            <p>Số vé đặt trong tháng</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-bag"></i>
@@ -53,7 +51,7 @@
                     <!-- small box -->
                     <div class="small-box bg-success">
                         <div class="inner">
-                            <h3>53<sup style="font-size: 20px">%</sup></h3>
+                            <h3 id="so_hieu_tang_truong">0<sup style="font-size: 20px">%</sup></h3>
 
                             <p>Số liệu tăng trưởng</p>
                         </div>
@@ -67,9 +65,9 @@
                     <!-- small box -->
                     <div class="small-box bg-warning">
                         <div class="inner">
-                            <h3>@user</h3>
+                            <h3 id="sokhachhangmoi">0</h3>
 
-                            <p>Số người dùng đăng kí mới</p>
+                            <p>Số người dùng đăng kí mới trong tháng</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-person-add"></i>
@@ -110,11 +108,6 @@
                                         <a class="nav-link active"
                                            href="#revenue-chart"
                                            data-toggle="tab">Biểu đồ miền</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link"
-                                           href="#sales-chart"
-                                           data-toggle="tab">Biểu đồ tròn</a>
                                     </li>
                                 </ul>
                             </div>
