--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -35,12 +35,41 @@
     <link rel="stylesheet" href="/Content/plugins/daterangepicker/daterangepicker.css"/>
     <!-- summernote -->
     <link rel="stylesheet" href="/Content/plugins/summernote/summernote-bs4.min.css"/>
+    <style>
+        .inforSignIn {
+            top: 10px;
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            z-index: 10;
+            padding: 0.5rem;
+            background: #343a40;
+        }
+
+        .function-item {
+            display: block;
+            text-align: center;
+            padding: 0.5rem;
+            color: #c2c7d0 !important;
+            font-size: smaller;
+            cursor: pointer;
+            background: #343a40;
+        }
+    </style>
     @RenderSection("styles", false)
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
 <!-- Navbar -->
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+    
+    <!-- Thông Tin Chi Tiết -->
+        
+    <list class="inforSignIn">
+        <a class="function-item" onclick="ChuyenTrangThongTinChiTiet()">Thông Tin Chi Tiết</a>
+        <a href="/User/Signout" class="function-item">Đăng Xuất</a>
+    </list>
+
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -79,7 +108,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+        <div id="chiTiet" class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
                 <img src="@nhanvien.DuongDanAnh"
                      class="img-circle elevation-2"
@@ -89,7 +118,11 @@
                 <a href="#" class="d-block">@nhanvien.Ten</a>
                 <input class="MaTaiKhoan" type="hidden" value="@taiKhoan.MaTaiKhoan"/>
             </div>
+            
         </div>
+        
+        
+
 
         <!-- SidebarSearch Form -->
         <div class="form-inline">
@@ -385,6 +418,39 @@
 
     chat.client.updateSoKhachHangMoi = function (value) {
         $('#sokhachhangmoi')[0].innerText = value;
+    }
+
+    var isHoverInformation = false;
+
+    $($('.inforSignIn')[0]).hover(function () {
+        isHoverInformation = !isHoverInformation;
+        if (!isHoverInformation)
+        if ($(this).css('display') == 'none') {
+            $(this).css('display', 'flex');
+        } else {
+            $(this).css('display', 'none');
+            }
+    })
+
+    $('#chiTiet').hover(function() {
+        console.log(123);
+        var element = $($('.inforSignIn')[0]);
+        if ($(element).css('display') == 'none') {
+            $(element).css('display', 'flex');
+        } else {
+            setTimeout(function () {
+                if (!isHoverInformation)
+                    $(element).css('display', 'none')
+                },
+                1000);
+        };
+    });
+
+
+    function ChuyenTrangThongTinChiTiet() {
+        var maTaiKhoanBox = $(".MaTaiKhoan")[0];
+        var maTaiKhoan = $(maTaiKhoanBox).val();
+        window.location.href = "/user/inforuser/" + maTaiKhoan;
     }
 
 
