update một số lỗi admin

--- a/BanVeDiTourDuLich/Views/Admin/EditDiaDiem.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/EditDiaDiem.cshtml
@@ -22,7 +22,7 @@
                     </div>
                     <!-- /.col-lg-12 -->
                     <div class="col-lg-7" style="padding-bottom:120px">
-                        <form action="/Admin/EditDiaDiem" method="POST" id="Recipe_add">
+                        <form action="/Admin/EditDiaDiem" method="POST" id="Recipe_add" enctype="multipart/form-data">
                             <input name="postfile" style="width:0.1px;height:0.1px;border-width:0" />
                             <div class="form-group">
                                 <label>Mã Địa Điểm</label>
