update quan ly nhan vien khach hang

--- a/BanVeDiTourDuLich/Views/Admin/QuanLyBanVe.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyBanVe.cshtml
@@ -126,9 +126,10 @@
             width: 100%
         }
 
-        .btn-delete{
+        .btn-delete {
             border: none;
             width: 100%;
+            background: none;
         }
     </style>
 }
