--- a/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
@@ -138,6 +138,7 @@
         .btn-delete {
             border: none;
             width: 100%;
+            background: none;
         }
     </style>
 }
