--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -80,9 +80,6 @@
         <li class="nav-item d-none d-sm-inline-block">
             <a href="index3.html" class="nav-link">Trang chủ</a>
         </li>
-        <li class="nav-item d-none d-sm-inline-block">
-            <a href="#" class="nav-link">Liên hệ</a>
-        </li>
     </ul>
 
     <!-- SEARCH FORM -->
@@ -121,23 +118,6 @@
             
         </div>
         
-        
-
-
-        <!-- SidebarSearch Form -->
-        <div class="form-inline">
-            <div class="input-group" data-widget="sidebar-search">
-                <input class="form-control form-control-sidebar"
-                       type="search"
-                       placeholder="Tìm Kiếm"
-                       aria-label="Search"/>
-                <div class="input-group-append">
-                    <button class="btn btn-sidebar">
-                        <i class="fas fa-search fa-fw"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
@@ -155,7 +135,7 @@
                 </li>
                 <li class="nav-item">
                     <a id="#QuanLyVeLink" href="/admin/QuanLyTour" class="nav-link">
-                        <i class="nav-icon fas fa-ticket-alt"></i>
+                        <i class="fas fa-paper-plane"></i>
                         <p>Quản lý Tour</p>
                     </a>
                 </li>
@@ -170,15 +150,22 @@
                 <!-- Quản lý người dùng -->
                 <li class="nav-item">
                     <a id="#QuanLyNguoiDungLink" href="/admin/quanlynguoidung" class="nav-link">
-                        <i class="nav-icon fas fas fa-users"></i>
+                        <i class="fas fa-user-tie"></i>
                         <p>Quản lý người dùng</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a id="#QuanLyNguoiDungLink" href="/admin/QuanLyDiaDiem" class="nav-link">
-                        <i class="nav-icon fas fas fa-users"></i>
+                        <i class="fas fa-map"></i>
                         <p>Quản lý địa điểm</p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a id="#QuanLyNguoiDungLink" href="/admin/QuanLyNhanVien" class="nav-link">
+                        <i class="nav-icon fas fas fa-users"></i>
+                        <p>Quản lý nhân viên</p>
                     </a>
                 </li>
             </ul>
