--- a/BanVeDiTourDuLich/Views/Admin/QuanLyNguoiDung.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyNguoiDung.cshtml
@@ -1,4 +1,5 @@
-﻿@model BanVeDiTourDuLich.ViewModels.QuanLyNguoiDungViewModel 
+﻿@using BanVeDiTourDuLich.Controllers
+@model BanVeDiTourDuLich.ViewModels.QuanLyNguoiDungViewModel
 @{
     ViewBag.Title = "QuanLyNhanVien";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -57,7 +58,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @{int i = 1;}  
+                    @{int i = 1;}
                     @foreach (var thongTinNguoiDung in Model.ThongTinCacNguoiDung)
                     {
                         <tr>
@@ -65,13 +66,22 @@
                             <td>
                                 <a> @thongTinNguoiDung.TenNguoiDung </a>
                                 <br />
-                                <small> Tạo vào 01.01.2019 </small>
+                                <small> Tạo vào @thongTinNguoiDung.NgayTaoTaiKhoan.ToString("dd.MM.yyyy") </small>
                             </td>
                             <td>
-                                <p>@thongTinNguoiDung.SoTienMua VNĐ</p>
+                                <p>@TourController.AddDotAndCommaToInteger(thongTinNguoiDung.SoTienMua) VNĐ</p>
                             </td>
                             <td>
                                 <p>@thongTinNguoiDung.SoVeMua vé</p>
+                            </td>
+                            <td class="project-actions text-center">
+
+                                <button class="btn-delete">
+                                    <a href="/user/InforUser/@thongTinNguoiDung.MaNguoiDung" class="btn btn-danger btn-sm btn-max-width js-xoa">
+                                        <i class="fas fa-trash"> </i>
+                                        Chỉnh sửa
+                                    </a>
+                                </button>
                             </td>
                         </tr>
                     }
@@ -85,3 +95,17 @@
     <!-- /.content -->
 </div>
 
+@section styles
+{
+    <style>
+        .js-xoa {
+            width: 100%
+        }
+
+        .btn-delete {
+            border: none;
+            width: 100%;
+            background: none;
+        }
+    </style>
+}
