--- a/BanVeDiTourDuLich/Views/Admin/QuanLyNhanVien.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyNhanVien.cshtml
@@ -1,29 +1,23 @@
-﻿
+﻿@using BanVeDiTourDuLich.Controllers
+@model List<NhanVien>
 @{
-    ViewBag.Title = "QuanLyDiaDiem";
+    ViewBag.Title = "QuanLyNhanVien";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-    int i = 1;
 }
-@model List<DiaDiem>
-<style>
-    .btn-max-width {
-        width: 80%;
-    }
-</style>
-
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Quản lý Địa Điểm</h1>
+                    <h1 class="m-0 text-dark">Quản lý nhân viên</h1>
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="/Admin/ThemMoiDiaDiem">Thêm địa điểm mới</a></li>
-                        @*<li class="breadcrumb-item active">Quản lý vé</li>*@
+                        <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+                        <li class="breadcrumb-item active">Quản lý nhân viên</li>
                     </ol>
                 </div>
                 <!-- /.col -->
@@ -36,8 +30,7 @@
     <!-- Main content -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Địa Điểm</h3>
-
+            <h3 class="card-title">Nhân viên</h3>
             <div class="card-tools">
                 <button type="button"
                         class="btn btn-tool"
@@ -58,54 +51,36 @@
                 <thead>
                     <tr>
                         <th style="width: 1%">#</th>
-                        <th style="width: 10%">Mã Địa Điểm</th>
-                        <th style="width: 20%">Ảnh</th>
-                        <th style="width: 20%">Tên Địa Điểm</th>
-                        <th style="width: 20%">Địa chỉ </th>
+                        <th style="width: 20%">Tên Nhân Viên</th>
+                        <th style="width: 30%">Lương</th>
+                        <th>Ngày vào làm</th>
                         <th style="width: 20%"></th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (DiaDiem diaDiem in Model)
+                    @{int i = 1;}
+                    @foreach (var thongTinNguoiDung in Model.ToList())
                     {
-                        int x = 0;
                         <tr>
                             <td>@i</td>
                             <td>
-                                <a> @diaDiem.MaDiaDiem </a>
-                                <br />
-                            </td>
-                            <td><img style="width:40%" src="@diaDiem.DuongDanAnh" alt="Placholder Image 2" class="product-frame "></td>
-                            <td>
-                                <p> @diaDiem.TenDiaDiem</p>
+                                <a> @thongTinNguoiDung.Ten </a>
                             </td>
                             <td>
-                                <p>@diaDiem.DiaChi</p>
+                                <p>@TourController.AddDotAndCommaToInteger(thongTinNguoiDung.Luong) VNĐ</p>
                             </td>
-                            
+                            <td>
+                                <p>@thongTinNguoiDung.NgayVaoLam.ToString("dd.MM.yyyy")</p>
+                            </td>
                             <td class="project-actions text-center">
-
                                 <button class="btn-delete">
-                                    <a href="/Admin/EditDiaDiem/@diaDiem.MaDiaDiem" class="btn btn-danger btn-sm btn-max-width js-xoa">
+                                    <a href="/user/InforUser/@thongTinNguoiDung.MaNhanVien" class="btn btn-danger btn-sm btn-max-width js-xoa">
                                         <i class="fas fa-trash"> </i>
                                         chỉnh sửa
                                     </a>
                                 </button>
-
-                                <form action="/Admin/XoaDiaDiem" method="post">
-                                    <input name='id' type="hidden" value="@diaDiem.MaDiaDiem" />
-                                    <button class="btn-delete" type='submit'>
-                                        <a class="btn btn-danger btn-sm btn-max-width js-xoa">
-                                            <i class="fas fa-trash"> </i>
-                                            Xóa
-                                        </a>
-                                    </button>
-                                </form>
                             </td>
-
                         </tr>
-                        i++;
-                        x++;
                     }
 
                 </tbody>
@@ -116,10 +91,6 @@
     <!-- /.card -->
     <!-- /.content -->
 </div>
-@section scripts
-{
-
-}
 
 @section styles
 {
@@ -135,6 +106,3 @@
         }
     </style>
 }
-
-
-
