--- a/BanVeDiTourDuLich/Views/User/InforUser.cshtml
+++ b/BanVeDiTourDuLich/Views/User/InforUser.cshtml
@@ -171,6 +171,15 @@
         <input id="isCustomer" type="hidden" value="0" />
     }
 
+    @if (Model.isCustomerViewing)
+    {
+        <input id="isCustomerViewing" type="hidden" value="1" />
+    }
+    else
+    {
+        <input id="isCustomerViewing" type="hidden" value="0" />
+    }
+
     <div id="breadcrum" style="margin-top: 14rem">
         <div class="container">
             <div class="row">
@@ -194,7 +203,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center mg-bot30">
-                        <h2 style="font-size: x-large; font-weight: 700;">Thông tin khách hàng</h2>
+                        @if (Model.isCustomer)
+                        {
+                            <h2 style="font-size: x-large; font-weight: 700;">Thông tin khách hàng</h2>
+                        }
+                        else
+                        {
+                            <h2 style="font-size: x-large; font-weight: 700;">Thông tin nhân viên</h2>
+                        }
                     </div>
                     <div class="col-xs-12">
                         <div class="row">
@@ -307,26 +323,33 @@
                                         }
                                     </div>
                                 </div>
-                            @if (!Model.isCustomer)
-                            {
-                                <div class="row mg-bot5">
-                                    <div class="col-md-2 col-sm-3 col-xs-4">
-                                        <label>Lương theo tháng:</label>
+                                @if (!Model.isCustomer)
+                                {
+                                    <div class="row mg-bot5">
+                                        <div class="col-md-2 col-sm-3 col-xs-4">
+                                            <label>Lương theo tháng:</label>
+                                        </div>
+                                        <div class="col-md-4 col-sm-4 col-xs-8">
+                                            <input class="form-control" id="Luong" name="Luong" type="number" value="@Model.NhanVien.Luong.ToString()">
+                                        </div>
+                                        <div class="col-md-5 col-sm-5 col-xs-8">
+                                            <button class="btn btn-primary" onclick="DoiLuong()">
+                                                Thay đổi &nbsp;<i class="fa fa-edit"></i>
+                                            </button>
+                                        </div>
                                     </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-8">
-                                        <input class="form-control" id="Luong" name="Luong" type="number" value="@Model.NhanVien.Luong.ToString()">
-                                    </div>
-                                    <div class="col-md-5 col-sm-5 col-xs-8">
-                                        <button class="btn btn-primary" onclick="DoiLuong()">
-                                            Thay đổi &nbsp;<i class="fa fa-edit"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            }
+                                }
                                 <div class="row mg-bot5">
                                 </div>
                                 <p>
-                                    <strong style="color: #1583e0 !important; text-transform: uppercase;">II. Thông tin khách hàng</strong>
+                                    @if (Model.isCustomer)
+                                    {
+                                        <strong style="color: #1583e0 !important; text-transform: uppercase;">II. Thông tin khách hàng</strong>
+                                    }
+                                    else
+                                    {
+                                        <strong style="color: #1583e0 !important; text-transform: uppercase;">II. Thông tin nhân viên</strong>
+                                    }
                                 </p>
                                 <form action="/User/UpdateCustomerInformation" enctype="multipart/form-data" id="frm" method="post" name="frm" novalidate="novalidate">
                                     <div class="row mg-bot5">
@@ -423,8 +446,8 @@
                                             }
                                         </div>
                                     </div>
-                                    
-                                    
+
+
 
                                     <div class="row mg-bot30 ">
                                         <div class="col-md-2 col-sm-2 col-xs-4">
@@ -607,7 +630,7 @@
             $.ajax({
                 type: "GET",
                 url: "/user/GetListTour",
-                success: function({ data }) {
+                success: function ({ data }) {
                     var htmlContent = '';
                     if (data.length == 0) {
                         htmlContent = `<tr>
@@ -666,10 +689,17 @@
         });
 
         var isCustomer = $('#isCustomer').val();
+        var isCustomerViewing = $('#isCustomerViewing').val();
         if (isCustomer == 0) {
             $($('.help-block')[0]).remove();
             $($('.msgbox')[0]).remove();
             $('#tourHistoryBtn').remove();
+        } else {
+            if (isCustomerViewing == 0) {
+                $($('.help-block')[0]).remove();
+                $($('.msgbox')[0]).remove();
+                $('#tourHistoryBtn').remove();
+            }
         }
 
         function DoiLuong() {
