--- a/BanVeDiTourDuLich/Views/Admin/QuanLyBanVe.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyBanVe.cshtml
@@ -66,10 +66,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @{var _context = new DataContext();};
+                    @{
+                        var _context = new DataContext();
+                        int i = 1;
+                    };
                     @foreach (var thongTinVe in @Model.DanhSachThongTinVe)
                     {
-                        int i = 1;
                         <tr>
                             <td>@i</td>
                             <td>
