--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -236,7 +236,9 @@
             </div>
             <!-- /.sidebar -->
         </aside>
-        @RenderBody()
+        <div id="content1">
+            @RenderBody()
+        </div>
         <footer class="main-footer">
             <strong>Bản quyền &copy; 2014-2020 <a href="#">Vacation</a>.</strong>
             Đã đăng kí bản quyền
@@ -577,17 +579,33 @@
         $(notificationItems).append(html);
     }
 
-        //$('#btn-message').click(function() {
-        //    var check = $("#chatIsShown")[0];
-        //    if (check.value == "1") {
-        //        $($(".direct-chat-contacts")[0]).show();
-        //        check.value = "0";
-        //    } else {
-        //        $($(".direct-chat-contacts")[0]).hide();
-        //        check.value = "1";
-        //    }
-        //})
+        function addOutAnimation(button) {
+            var notification_item = $(button).parent();
+            $(notification_item).addClass('notification__item__outanimation');
+            setTimeout(function () {
+                    $(notification_item).remove();
+                },
+                1000);
+    }
 
+    $(document).ready(function(){
+        $(".nav-link").click(function(e){
+            e.preventDefault(); // prevent default link button redirect behaviour     
+            var url=$(this).attr("href");
+            $('#content1').load(url);
+        });
+    });
+
+    //$('#btn-message').click(function() {
+    //    var check = $("#chatIsShown")[0];
+    //    if (check.value == "1") {
+    //        $($(".direct-chat-contacts")[0]).show();
+    //        check.value = "0";
+    //    } else {
+    //        $($(".direct-chat-contacts")[0]).hide();
+    //        check.value = "1";
+    //    }
+    //})
 </script>
 </body>
 </html>
