--- a/BanVeDiTourDuLich/Views/Admin/ChiTietVe.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/ChiTietVe.cshtml
@@ -1,4 +1,5 @@
-﻿@model BanVeDiTourDuLich.ViewModels.ThongTinHoaDon
+﻿@using BanVeDiTourDuLich.Controllers
+@model BanVeDiTourDuLich.ViewModels.ThongTinHoaDon
 @{
     ViewBag.Title = "ChiTietVe";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -93,10 +94,11 @@
                                             <td>@ve.Tour.MaTour</td>
                                             <td>@ve.Tour.DiaDiemDi.TenDiaDiem - @ve.Tour.DiaDiemDen.TenDiaDiem</td>
                                             <td>@ve.Tour.ThoigianDi</td>
-                                            <td>@ve.LoaiVe.GiaTien VNĐ</td>
+                                            <td>@TourController.AddDotAndCommaToInteger(@ve.LoaiVe.GiaTien) VNĐ</td>
                                             <td>1</td>
-                                            <td>@ve.LoaiVe.GiaTien VNĐ</td>
+                                            <td>@TourController.AddDotAndCommaToInteger(ve.LoaiVe.GiaTien) VNĐ</td>
                                         </tr>
+                                        i++;
                                     }
                                     </tbody>
                                 </table>
@@ -121,7 +123,7 @@
                                     <table class="table">
                                         <tr>
                                             <th>Tổng cộng:</th>
-                                            <td>@Model.HoaDon.Ves.Sum(ve => ve.LoaiVe.GiaTien)</td>
+                                            <td>@TourController.AddDotAndCommaToInteger(Model.HoaDon.Ves.Sum(ve => ve.LoaiVe.GiaTien)) VNĐ</td>
                                         </tr>
                                     </table>
                                 </div>
