--- a/BanVeDiTourDuLich/Views/Admin/QuanLyBanVe.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyBanVe.cshtml
@@ -1,4 +1,5 @@
-﻿@model BanVeDiTourDuLich.ViewModels.QuanLyVeViewModel
+﻿@using BanVeDiTourDuLich.Controllers
+@model BanVeDiTourDuLich.ViewModels.QuanLyVeViewModel
 @{
     ViewBag.Title = "QuanLyBanVe";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -9,6 +10,34 @@
     .btn-max-width {
         width: 80%;
     }
+
+    .sort-box {
+        display: flex;
+        justify-content: center;
+    }
+
+    #sort-selector {
+        margin-right: 2rem;
+        font-family: 'Font Awesome 5 Free';
+    }
+
+    #sort-direction {
+        margin-right: 2rem;
+        font-family: 'Font Awesome 5 Free';
+    }
+
+    #apply-sort, #apply-sort:focus {
+        border: none;
+        background: deepskyblue;
+        padding: 0.5rem;
+        border-radius: 1rem;
+        font-family: 'Font Awesome 5 Free';
+        outline: none;
+    }
+
+        #apply-sort:hover {
+            background: rgba(0 , 191 , 255, 0.5);
+        }
 </style>
 
 <div class="content-wrapper">
@@ -37,7 +66,25 @@
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Vé</h3>
+            <div class="sort-box">
+                <select id="sort-selector">
+                    <option value="">--Chọn cách sắp xếp--</option>
+                    <option value="MaVe">Mã Vé</option>
+                    <option value="DiemDen">Điểm Đến</option>
+                    <option value="DiemDi">Điểm Đi</option>
+                    <option value="NguoiMua">Người Mua</option>
+                    <option value="NgayThanhToan">Ngày Thanh Toán</option>
+                    <option value="SoTien">Số Tiền</option>
+                </select>
 
+                <select id="sort-direction">
+                    <option value="">Chiều sắp xếp</option>
+                    <option value="1">Từ cao tới thấp</option>
+                    <option value="0">Từ thấp tới cao</option>
+                </select>
+                
+                <button id="apply-sort">Áp Dụng</button>
+            </div>
             <div class="card-tools">
                 <button type="button"
                         class="btn btn-tool"
@@ -58,9 +105,11 @@
                 <thead>
                     <tr>
                         <th style="width: 1%">#</th>
-                        <th style="width: 20%">Mã vé</th>
+                        <th style="width: 5%">Mã vé</th>
                         <th style="width: 20%">Điểm đi-Điểm đến</th>
                         <th style="width: 15%">Thời gian khởi hành</th>
+                        <th style="width: 10%">Người Mua</th>
+                        <th>Ngày Thanh Toán</th>
                         <th>Thành tiền</th>
                         <th style="width: 20%"></th>
                     </tr>
@@ -72,37 +121,43 @@
                     }
                     @foreach (var thongTinVe in @Model.DanhSachThongTinVe)
                     {
-                        <tr>
-                            <td>@i</td>
-                            <td>
-                                <a> @thongTinVe.Ve.MaVe </a>
-                            </td>
-                            <td>
-                                <p>@thongTinVe.DiaDiemDi.TenDiaDiem - @thongTinVe.DiaDiemDen.TenDiaDiem</p>
-                            </td>
-                            <td>
-                                <p>@thongTinVe.Ve.Tour.ThoigianDi</p>
-                            </td>
-                            <td>
-                                <p>@thongTinVe.GiaTien VNĐ</p>
-                            </td>
-                            <td class="project-actions text-center">
-                                <a class="btn btn-primary btn-sm btn-max-width" href="/admin/quanlybanve/?id=@thongTinVe.Ve.MaVe">
-                                    <i class="fas fa-folder"> </i>
-                                    Xem chi tiết hóa đơn
-                                </a>
+                    <tr>
+                        <td>@i</td>
+                        <td>
+                            <a> @thongTinVe.Ve.MaVe </a>
+                        </td>
+                        <td>
+                            <p>@thongTinVe.DiaDiemDi.TenDiaDiem - @thongTinVe.DiaDiemDen.TenDiaDiem</p>
+                        </td>
+                        <td>
+                            <p>@thongTinVe.Ve.Tour.ThoigianDi</p>
+                        </td>
+                        <td>
+                            <p>@thongTinVe.Ve.HoaDon.KhachHang.Ten</p>
+                        </td>
+                        <td>
+                            <p>@thongTinVe.Ve.HoaDon.ThoiGianXuat</p>
+                        </td>
+                        <td>
+                            <p>@TourController.AddDotAndCommaToInteger(thongTinVe.GiaTien) VNĐ</p>
+                        </td>
+                        <td class="project-actions text-center">
+                            <a class="btn btn-primary btn-sm btn-max-width" href="/admin/quanlybanve/?id=@thongTinVe.Ve.MaVe">
+                                <i class="fas fa-folder"> </i>
+                                Xem chi tiết hóa đơn
+                            </a>
 
-                                <form action="/QuanLyBanVe/Xoa" method="post">
-                                    <input name='id' type="hidden" value="@thongTinVe.Ve.MaVe" />
-                                    <button class="btn-delete" type='submit'>
-                                        <a class="btn btn-danger btn-sm btn-max-width js-xoa">
-                                            <i class="fas fa-trash"> </i>
-                                            Xóa
-                                        </a>
-                                    </button>
-                                </form>
-                            </td>
-                        </tr>
+                            <form action="/QuanLyBanVe/Xoa" method="post">
+                                <input name='id' type="hidden" value="@thongTinVe.Ve.MaVe" />
+                                <button class="btn-delete" type='submit'>
+                                    <a class="btn btn-danger btn-sm btn-max-width js-xoa">
+                                        <i class="fas fa-trash"> </i>
+                                        Xóa
+                                    </a>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
                         { i++;}
                     }
 
@@ -116,7 +171,15 @@
 </div>
 @section scripts
 {
-
+    <script>
+        $('#apply-sort').click(function() {
+            var value = $('#sort-selector').val();
+            var direction = $('#sort-direction').val();
+            if (value != null && direction != null) {
+                window.location.href = `/admin/QuanLyBanVeSort?sortValue=${value}&sortDirection=${direction}`;
+            }
+        })
+    </script>
 }
 
 @section styles
