--- a/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
@@ -10,6 +10,7 @@
     .btn-max-width {
         width: 80%;
     }
+    
 </style>
 
 <div class="content-wrapper">
@@ -39,6 +40,26 @@
         <div class="card-header">
             <h3 class="card-title">Tour</h3>
 
+            <div class="sort-box">
+                <select id="sort-selector">
+                    <option value="">--Chọn cách sắp xếp--</option>
+                    <option value="MaTour">Mã Tour</option>
+                    <option value="DiemDen">Điểm Đến</option>
+                    <option value="DiemDi">Điểm Đi</option>
+                    <option value="SoTien">Số Tiền</option>
+                    <option value="ThoiGian">Thời Gian Khởi Hành</option>
+                </select>
+
+                <select id="sort-direction">
+                    <option value="">Chiều sắp xếp</option>
+                    <option value="1">Từ cao tới thấp</option>
+                    <option value="0">Từ thấp tới cao</option>
+                </select>
+
+                <button id="apply-sort">Áp Dụng</button>
+            </div>
+
+
             <div class="card-tools">
                 <button type="button"
                         class="btn btn-tool"
@@ -61,7 +82,7 @@
                         <th style="width: 1%">#</th>
                         <th style="width: 10%">Mã Tour</th>
                         <th style="width: 20%">Ảnh</th>
-                        <th style="width: 20%">Điểm đến</th>
+                        <th style="width: 20%">Điểm đi - Điểm đến</th>
                         <th style="width: 15%">Loại </th>
                         <th style="width: 10%">Giá Tiền </th>
                         <th style="width: 15%">Thời gian khởi hành</th>
@@ -121,7 +142,15 @@
 </div>
 @section scripts
 {
-
+    <script>
+        $('#apply-sort').click(function() {
+            var value = $('#sort-selector').val();
+            var direction = $('#sort-direction').val();
+            if (value != null && direction != null) {
+                window.location.href = `/admin/QuanLyTourSort?sortValue=${value}&sortDirection=${direction}`;
+            }
+        })
+    </script>
 }
 
 @section styles
@@ -135,6 +164,34 @@
             border: none;
             width: 100%;
             background: none;
+        }
+
+        .sort-box {
+            display: flex;
+            justify-content: center;
+        }
+
+        #sort-selector {
+            margin-right: 2rem;
+            font-family: 'Font Awesome 5 Free';
+        }
+
+        #sort-direction {
+            margin-right: 2rem;
+            font-family: 'Font Awesome 5 Free';
+        }
+
+        #apply-sort, #apply-sort:focus {
+            border: none;
+            background: deepskyblue;
+            padding: 0.5rem;
+            border-radius: 1rem;
+            font-family: 'Font Awesome 5 Free';
+            outline: none;
+        }
+
+        #apply-sort:hover {
+            background: rgba(0 , 191 , 255, 0.5);
         }
     </style>
 }
