--- a/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
@@ -1,4 +1,5 @@
-﻿@model BanVeDiTourDuLich.ViewModels.QuanLyTourViewModel
+﻿@using PagedList.Mvc
+@model BanVeDiTourDuLich.ViewModels.QuanLyTourViewModel
 @{
     ViewBag.Title = "QuanLyTour";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -88,18 +89,18 @@
                                 <p>@tour.Tour.ThoigianDi</p>
                             </td>
                             <td class="project-actions text-center">
-                                
-                                    <button class="btn-delete" >
-                                        <a href="/Admin/EditTour/@tour.Tour.MaTour" class="btn btn-danger btn-sm btn-max-width js-xoa">
-                                            <i class="fas fa-trash"> </i>
-                                            chỉnh sửa
-                                        </a>
-                                    </button>
-                               
+
+                                <button class="btn-delete">
+                                    <a href="/Admin/EditTour/@tour.Tour.MaTour" class="btn btn-danger btn-sm btn-max-width js-xoa">
+                                        <i class="fas fa-trash"> </i>
+                                        chỉnh sửa
+                                    </a>
+                                </button>
+
                                 <form action="/Admin/XoaTour" method="post">
                                     <input name='id' type="hidden" value="@tour.Tour.MaTour" />
                                     <button class="btn-delete" type='submit'>
-                                        <a class="btn btn-danger btn-sm btn-max-width js-xoa"> 
+                                        <a class="btn btn-danger btn-sm btn-max-width js-xoa">
                                             <i class="fas fa-trash"> </i>
                                             Xóa
                                         </a>
@@ -113,6 +114,17 @@
 
                 </tbody>
             </table>
+        </div>
+        <div class="container">
+           
+            <div class="pagination">
+               
+                <a   href="/admin/QuanLyTour?page=1">1</a>
+                <a href="/admin/QuanLyTour?page=2">2</a>
+                <a href="/admin/QuanLyTour?page=3">3</a>
+                
+             
+            </div>
         </div>
         <!-- /.card-body -->
     </div>
