Update Sort And Revert

--- a/BanVeDiTourDuLich/Views/Admin/QuanLyNhanVien.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyNhanVien.cshtml
@@ -31,6 +31,22 @@
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Nhân viên</h3>
+            <div class="sort-box">
+                <select id="sort-selector">
+                    <option value="">--Chọn cách sắp xếp--</option>
+                    <option value="Ten">Tên Nhân Viên</option>
+                    <option value="Luong">Lương</option>
+                    <option value="NgayVaoLam">Ngày Vào Làm</option>
+                </select>
+
+                <select id="sort-direction">
+                    <option value="">Chiều sắp xếp</option>
+                    <option value="1">Từ cao tới thấp</option>
+                    <option value="0">Từ thấp tới cao</option>
+                </select>
+
+                <button id="apply-sort">Áp Dụng</button>
+            </div>
             <div class="card-tools">
                 <button type="button"
                         class="btn btn-tool"
@@ -104,5 +120,46 @@
             width: 100%;
             background: none;
         }
+
+        .sort-box {
+            display: flex;
+            justify-content: center;
+        }
+
+        #sort-selector {
+            margin-right: 2rem;
+            font-family: 'Font Awesome 5 Free';
+        }
+
+        #sort-direction {
+            margin-right: 2rem;
+            font-family: 'Font Awesome 5 Free';
+        }
+
+        #apply-sort, #apply-sort:focus {
+            border: none;
+            background: deepskyblue;
+            padding: 0.5rem;
+            border-radius: 1rem;
+            font-family: 'Font Awesome 5 Free';
+            outline: none;
+        }
+
+            #apply-sort:hover {
+                background: rgba(0, 191, 255, 0.5);
+            }
     </style>
+}
+
+@section scripts
+{
+    <script>
+        $('#apply-sort').click(function() {
+            var value = $('#sort-selector').val();
+            var direction = $('#sort-direction').val();
+            if (value != null && direction != null) {
+                window.location.href = `/admin/QuanLyNhanVienSort?sortValue=${value}&sortDirection=${direction}`;
+            }
+        })
+    </script>
 }
